--- a/frontend/mon-app/public/css/soft-ui-dashboard.css
+++ b/frontend/mon-app/public/css/soft-ui-dashboard.css
@@ -2908,7 +2908,7 @@ textarea.form-control-lg {
 .form-select_date_deb 
 {
   display: block;
-  width: 23%;
+  width:30em;
   padding: 0.5rem 1rem 0.5rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
   font-size: 0.875rem;
@@ -2929,7 +2929,7 @@ textarea.form-control-lg {
 .form-select_date_fin
 {
   display: block;
-  width: 23%;
+  width:30em;
   padding: 0.5rem 1rem 0.5rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
   font-size: 0.875rem;
@@ -2950,8 +2950,11 @@ textarea.form-control-lg {
   display: flex;
   flex-direction: row;
   grid-gap: 10px;
-  margin-left:40% ;
+  margin-left:50% ;
+  margin-bottom: 20px;
 }
+
+
 .as fa-search{
   width: 30em;
 }
@@ -25552,4 +25555,9 @@ form.sign-in-form_login {
   width: 2em;
 }
 
-
+.form_virement{
+  display: flex;
+  flex-direction: row;
+  grid-gap: 10px;
+  
+}
