--- a/backend/controllers/Views/email.handlebars
+++ b/backend/controllers/Views/email.handlebars
@@ -55,7 +55,7 @@
                 <table align="center" border="1" cellpadding="0" cellspacing="0" class="c-f1bud4" style="border: 0 none; border-collapse: separate;">
                   <tbody>
                     <tr align="center" class="c-1p7a68j" style="border: 0 none; border-collapse: separate; padding: 16px 0 15px;">
-                      <td style="border: 0 none; border-collapse: separate; vertical-align: middle;" valign="middle"><img alt="" src="https://www.bcscpa.com/bcs-blog/wp-content/uploads/2015/04/online-bank.jpg" class="c-1shuxio" style="border: 0 none; line-height: 100%; outline: none; text-decoration: none; height: 100px; width: 220px;" width="120" height="33"></td>
+                      <td style="border: 0 none; border-collapse: separate; vertical-align: middle;" valign="middle"><img alt="" src="https://previews.123rf.com/images/artsterdam/artsterdam2001/artsterdam200100009/139698168-online-banking-logo-design-bank-internet-banking-finance-and-financial-vector-design-and-illustratio.jpg" class="c-1shuxio" style="border: 0 none; line-height: 100%; outline: none; text-decoration: none; height: 180px; width: 220px;" width="120" height="33"></td>
                     </tr>
                   </tbody>
                 </table>
@@ -75,22 +75,22 @@
                             </tr>
                             <tr style="border: 0 none; border-collapse: separate;">
                               <td class="c-46vhq4 c-4w6eli" style="border: 0 none; border-collapse: separate; vertical-align: middle; font-family: &quot; HelveticaNeue&quot;,&quot;HelveticaNeue&quot;,&quot;HelveticaNeueRoman&quot;,&quot;HelveticaNeue-Roman&quot;,&quot;HelveticaNeueRoman&quot;,&quot;HelveticaNeue-Regular&quot;,&quot;HelveticaNeueRegular&quot;,Helvetica,Arial,&quot;LucidaGrande&quot;,sans-serif;font-weight: 400; color: #7F8FA4; font-size: 15.45455px; padding-top: 20px;"
-                                valign="middle">Bienvenue a votre banque en ligne E-banking</td>
+                                valign="middle">Bienvenue à votre banque en ligne E-banking</td>
                             </tr>
                             <tr style="border: 0 none; border-collapse: separate;">
-                              <td class="c-eitm3s c-16v5f34" style="border: 0 none; border-collapse: separate; vertical-align: middle; font-family: &quot; HelveticaNeueMedium&quot;,&quot;HelveticaNeue-Medium&quot;,&quot;HelveticaNeueMedium&quot;,&quot;HelveticaNeue&quot;,&quot;HelveticaNeue&quot;,sans-serif;font-weight: 500; font-size: 13.63636px; padding-top: 12px;"
+                              <td class="c-eitm3s c-16v5f34" style="border: 0 none;   padding-top: 12px;"
                                 valign="middle">Information d'accés</td>
                             </tr>
                             <tr style="border: 0 none; border-collapse: separate;">
-                                <td class="c-eitm3s c-16v5f34" style="border: 0 none; border-collapse: separate; vertical-align: middle; font-family: &quot; HelveticaNeueMedium&quot;,&quot;HelveticaNeue-Medium&quot;,&quot;HelveticaNeueMedium&quot;,&quot;HelveticaNeue&quot;,&quot;HelveticaNeue&quot;,sans-serif;font-weight: 500; font-size: 13.63636px; padding-top: 12px;"
-                                  valign="middle">Identifiant : <b>{{login}}</b></td>
+                                <td class="c-eitm3s c-16v5f34" style="border: 0 none;   padding-top: 12px;"
+                                valign="middle">Identifiant : <b>{{login}}</b></td>
                               </tr>
                               <tr style="border: 0 none; border-collapse: separate;">
-                                <td class="c-eitm3s c-16v5f34" style="border: 0 none; border-collapse: separate; vertical-align: middle; font-family: &quot; HelveticaNeueMedium&quot;,&quot;HelveticaNeue-Medium&quot;,&quot;HelveticaNeueMedium&quot;,&quot;HelveticaNeue&quot;,&quot;HelveticaNeue&quot;,sans-serif;font-weight: 500; font-size: 13.63636px; padding-top: 12px;"
-                                  valign="middle">Mot de passe (temporaire) : <b>{{mdp}}</b></td>
+                                <td class="c-eitm3s c-16v5f34" style="border: 0 none;   padding-top: 12px;"
+                                valign="middle">Mot de passe (temporaire) : <b>{{mdp}}</b></td>
                               </tr>
                               <tr style="border: 0 none; border-collapse: separate;">
-                                <td class="c-eitm3s c-16v5f34" style="border: 0 none; border-collapse: separate; vertical-align: middle; font-family: &quot; HelveticaNeueMedium&quot;,&quot;HelveticaNeue-Medium&quot;,&quot;HelveticaNeueMedium&quot;,&quot;HelveticaNeue&quot;,&quot;HelveticaNeue&quot;,sans-serif;font-weight: 500; font-size: 13.63636px; padding-top: 12px;display:flex"
+                                <td class="c-eitm3s c-16v5f34" style="border: 0 none;   padding-top: 12px;display:flex"
                                   valign="middle" >
                                   
                                   <p><b>NOTE:</b></p>
