--- a/frontend/mon-app/public/css/soft-ui-dashboard.css
+++ b/frontend/mon-app/public/css/soft-ui-dashboard.css
@@ -25324,7 +25324,7 @@ form.sign-in-form_login {
 }
 
 .btn_login {
-  width: 150px;
+  width: 370px;
   background-color: #5995fd;
   border: none;
   outline: none;
@@ -25827,4 +25827,80 @@ align-items: center;
   flex-direction: row;
   grid-gap: 10px;
   margin-bottom: 22px;
+}
+
+.content_simul_credit .part1_form {
+  width: 69%;
+  float: left;
+  margin-right: 1%;
+}
+.box_simulateur {
+  width: 100%;
+  margin: 15px 0px;
+}
+.box_simulateur .titre_box_simul {
+  width: 100%;
+  padding: 15px;
+  background: #f4f2f5;
+  border-radius: 10px 10px 0px 0px;
+  font: 19px Arial, Helvetica, sans-serif;
+  color: #333333;
+}
+.box_simulateur .content_box_simul {
+  width: 100%;
+  padding: 15px;
+  border-radius: 0px 0px 10px 10px;
+  border: 1px #ece9ee solid;
+  display: block;
+  overflow: hidden;
+}
+.box_sim_50 {
+  float: left;
+  width: 47%;
+  margin: 10px;
+  position: relative;
+}
+.content_simul_credit .part2_recap {
+  width: 30%;
+  float: left;
+}
+.btt_simuler {
+  float: right;
+  margin: 30px 0px;
+  width: 170px;
+  height: 60px;
+  text-align: center;
+  padding: 15px 0px;
+  color: #fff;
+  background: #980c1d;
+  font: 18px Arial, Helvetica, sans-serif;
+  border: none;
+  border-radius: 7px;
+}
+.part1_recap{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  grid-gap: 7px;
+}
+.part1_div_h4{
+  background: #f4f2f5;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+.part1_div_h4 h4{
+  margin-left: 20px;
+  font-size: 20px;
+  color: #808080;
+  font-weight: normal;
+}
+.titre_page_liste_assurance {
+  width: 100%;
+  overflow: hidden;
+  height: 50px;
+  font: bold 41px Arial, Helvetica, sans-serif;
+  color: #a2051a;
+  position: relative;
+  margin-bottom: 40px;
 }
