--- a/backend/controllers/Views/Activer_compte.handlebars
+++ b/backend/controllers/Views/Activer_compte.handlebars
@@ -77,7 +77,7 @@
                             text-decoration: none;
                           "
                         >
-                        Activation un compte bancaire
+                        Activation d'un compte bancaire
                         </td>
                       </tr>
                       <tr>
@@ -126,11 +126,11 @@
                             width: 100%;
                           "
                         >
- Bonjour monsieur
+ Bonjour M(me)
                       <b>
                        {{np}}
                       </b>
-                      Votre compte a été activé avec succès ,
+                      Votre compte bancaire est bien été activé ,
                       
                                               </td>
                       </tr>
