--- a/backend/controllers/Views/Annulation_demande_carte_bancaire.handlebars
+++ b/backend/controllers/Views/Annulation_demande_carte_bancaire.handlebars
@@ -126,11 +126,11 @@
                             width: 100%;
                           "
                         >
- Bonjour monsieur
+ Bonjour M(me)
                       <b>
                        {{np}}
                       </b>
-                       votre demande de carte bancaire {{nom_carte}} est <b>Annuler</b> a cause de  <b>{{raison}}</b> Merci pour votre compréhension </b></p></b> ,
+                       votre demande de carte bancaire {{nom_carte}} est <b>Annulée</b> à cause de  <b>{{raison}}</b> Merci pour votre compréhension </b></p></b> ,
                       
                                               </td>
                       </tr>
