--- a/backend/controllers/Views/Fermeture_compte.handlebars
+++ b/backend/controllers/Views/Fermeture_compte.handlebars
@@ -77,7 +77,7 @@
                             text-decoration: none;
                           "
                         >
-                        Demande de fermeture d'un compte bancaire
+                        Demande de clôture d'un compte bancaire
                         </td>
                       </tr>
                       <tr>
@@ -126,11 +126,11 @@
                             width: 100%;
                           "
                         >
- Bonjour monsieur
+ Bonjour M(me)
                       <b>
                        {{np}}
                       </b>
-                      votre demande de fermeture d'un compte bancaire <b>validée</b> ,
+                      votre demande de clôture est <b>validée</b> ,
                       
                                               </td>
                       </tr>
