--- a/backend/controllers/Views/email.handlebars
+++ b/backend/controllers/Views/email.handlebars
@@ -94,7 +94,7 @@
                                   valign="middle" >
                                   
                                   <p><b>NOTE:</b></p>
-                                  <p style="color: red;">Vous serez invité a changer votre mot de passe lors de votre premiere utlilisation</p>
+                                  <p style="color: red;">Vous serez invité à changer votre mot de passe lors de votre premiére utlilisation</p>
                                   </td>
                               </tr>
                             <tr style="border: 0 none; border-collapse: separate;">
