--- a/backend/controllers/Views/virement_réussi.handlebars
+++ b/backend/controllers/Views/virement_réussi.handlebars
@@ -126,12 +126,12 @@
                             width: 100%;
                           "
                         >
- Bonjour monsieur
+ Bonjour M(me)
                       <b>
                        {{np}}
                       </b>
-                     vous avez reçu un <b>virement</b> s'il vous plaît vérifier votre compte
-</b></p></b> ,
+                     vous avez reçu un <b>virement</b> s'il vous plaît vérifier votre compte bancaire
+</b></p></b> 
                       
                                               </td>
                       </tr>
