--- a/backend/controllers/Views/validation_demande_rdv.handlebars
+++ b/backend/controllers/Views/validation_demande_rdv.handlebars
@@ -126,7 +126,7 @@
                             width: 100%;
                           "
                         >
- Bonjour monsieur
+ Bonjour M(me)
                       <b>
                        {{np}}
                       </b>
