--- a/frontend/mon-app/public/css/soft-ui-dashboard.css
+++ b/frontend/mon-app/public/css/soft-ui-dashboard.css
@@ -25879,7 +25879,7 @@ align-items: center;
 }
 .part1_recap{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   grid-gap: 7px;
 }
