--- a/frontend/mon-app/public/css/soft-ui-dashboard.css
+++ b/frontend/mon-app/public/css/soft-ui-dashboard.css
@@ -25686,6 +25686,10 @@ form.sign-in-form_login {
   width: 2em;
   margin-left: 69em;
 }
+.img_y{
+  width: 2em;
+  margin-left: 50em;
+}
 .agences{
   width: 22em;
   height: 30em;
