--- a/backend/controllers/Views/Fermeture_compte.handlebars
+++ b/backend/controllers/Views/Fermeture_compte.handlebars
@@ -77,7 +77,7 @@
                             text-decoration: none;
                           "
                         >
-                        Demande de clôture d'un compte bancaire
+                        Demande de désactivation d'un compte bancaire
                         </td>
                       </tr>
                       <tr>
@@ -130,7 +130,7 @@
                       <b>
                        {{np}}
                       </b>
-                      votre demande de clôture est <b>validée</b> ,
+                      votre demande de désactivation est <b>validée</b> ,
                       
                                               </td>
                       </tr>
